--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
 #/ WHEN ADDING A NEW PROJECT FOLDER... ADD PATHS TO THESE...
-#/node_modules
-#/.pnp
-#.pnp.js
+#01-getting-started/first-react-p/node_modules
+#01-getting-started/first-react-p/.pnp
+#01-getting-started/first-react-p.pnp.js
+#01-getting-started/first-react-p/coverage
+#01-getting-started/first-react-p/build
+#01-getting-started/first-react-p.DS_Store
+#01-getting-started/first-react-p.env.local
+#01-getting-started/first-react-p.env.development.local
+#01-getting-started/first-react-p.env.test.local
+#01-getting-started/first-react-p.env.production.local
+#01-getting-started/first-react-p/npm-debug.log*
+#01-getting-started/first-react-p/yarn-debug.log*
+#01-getting-started/first-react-p/yarn-error.log*
 
-# testing
-#/coverage
 
-# production
-#/build
+01-getting-started/first-react-p/node_modules
+01-getting-started/first-react-p/.pnp
+01-getting-started/first-react-p.pnp.js
+01-getting-started/first-react-p/coverage
+01-getting-started/first-react-p/build
+01-getting-started/first-react-p.DS_Store
+01-getting-started/first-react-p.env.local
+01-getting-started/first-react-p.env.development.local
+01-getting-started/first-react-p.env.test.local
+01-getting-started/first-react-p.env.production.local
+01-getting-started/first-react-p/npm-debug.log*
+01-getting-started/first-react-p/yarn-debug.log*
+01-getting-started/first-react-p/yarn-error.log*
 
-
-# misc
 Resources/
 homeReading.md
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
