--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,20 @@
 01-getting-started/first-react-p/yarn-debug.log*
 01-getting-started/first-react-p/yarn-error.log*
 
+SECTION-02-React-Basics-And-Working-With-Components/node_modules
+SECTION-02-React-Basics-And-Working-With-Components/.pnp
+SECTION-02-React-Basics-And-Working-With-Components.pnp.js
+SECTION-02-React-Basics-And-Working-With-Components/coverage
+SECTION-02-React-Basics-And-Working-With-Components/build
+SECTION-02-React-Basics-And-Working-With-Components.DS_Store
+SECTION-02-React-Basics-And-Working-With-Components.env.local
+SECTION-02-React-Basics-And-Working-With-Components.env.development.local
+SECTION-02-React-Basics-And-Working-With-Components.env.test.local
+SECTION-02-React-Basics-And-Working-With-Components.env.production.local
+SECTION-02-React-Basics-And-Working-With-Components/npm-debug.log*
+SECTION-02-React-Basics-And-Working-With-Components/yarn-debug.log*
+SECTION-02-React-Basics-And-Working-With-Components/yarn-error.log*
+
+
 Resources/
 homeReading.md
