--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-homeReading.md
+#node_modules
+SECTION-06-Styling-React-Components/01-starting-project/node_modules
+#course files
 Resources/
+#tasks
+homeReading.md
