--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #node_modules
 SECTION-06-Styling-React-Components/01-starting-project/node_modules
 SECTION-07-Debugging-React-Apps/node_modules
+SECTION-08-Practice-Project/node_modules
 #course files
 Resources/
 #tasks
