--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 SECTION-06-Styling-React-Components/01-starting-project/node_modules
 SECTION-07-Debugging-React-Apps/node_modules
 SECTION-08-Practice-Project/node_modules
+SECTION-09-Fragments-Portals-Refs/node_modules
 #course files
 Resources/
 #tasks
