Finish useEffect() for Http Requests

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #node_modules
 SECTION-13-CLASS-BASED/first/node_modules
+SECTION-14-Http-Requests/01-starting-project/node_modules
 #course files
 Resources/
 #tasks
